# ADC-data-to-Azure-cloud-using-WizFi360-Evb-Pico-

./: .gitmodules  CMakeLists.txt  README.md  getting_started.md  wizfi360_evb_pico_azure_c-patch.cmake  wizfi360_evb_pico_azure_c_sdk_version.cmake
examples/: CMakeLists.txt  app_main.c  azure_mqtt_demo.c  azure_samples.h  iot_demo.c  sample_certs.c  socket_startup.c
examples/iothub_ll_c2d_sample/: README.md  iothub_ll_c2d_sample.c
examples/iothub_ll_client_x509_sample/: README.md  iothub_ll_client_x509_sample.c
examples/iothub_ll_telemetry_sample/: README.md  iothub_ll_telemetry_sample.c
examples/prov_dev_client_ll_sample/: README.md  prov_dev_client_ll_sample.c
libraries/: CMakeLists.txt
libraries/CMSIS-FreeRTOS/CMSIS/RTOS2/FreeRTOS/Source/: cmsis_os2.c
patches/: 01_cmsis_freertos_cmsis_os2.patch
port/: CMakeLists.txt  port_common.h
port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/RTE/inc/: RTE_Components.h
port/WizFi360/inc/: RP2040_Device.h  UART_RP2040.h  WiFi_WizFi360_Config.h
port/WizFi360/src/: UART_RP2040.c
port/azure-iot-sdk-c/inc/: netif.h  netutil.h
port/azure-iot-sdk-c/inc/sys/: socket.h
port/azure-iot-sdk-c/src/: agenttime.c  netif.c  netutil.c  platform_freertos.c  tcpsocketconnection_c.c  threadapi.c  tickcounter.c  tlsio_mbedtls.c
port/mbedtls/inc/: ssl_config.h
